tests/kulezi_tests/bad/shadowed_self.lat
class C {
    int self;
}

int main() {
    return 0;
}